add reverse engineering blog of assembly language

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Coder Jay-Blog
-description: "Coder Jay's persional blog"
+title: Coder Jay's Blog
+description: "Coder Jay's persional tech blog"
 author:
   name: "Coder Jay"
   email: "hejiedhj@.163.com"
